--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JOYFLIX</title>
+  <link rel="stylesheet" href="./css/login.css">
+  <script type="module" src="./js/users.js" defer></script>
+  <script type="module" src="./js/login.js" defer></script>
 </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  <form class="form_main" id="login-form" action="">
+    <p class="heading">Login</p>
+    <div class="inputContainer">
+      <input placeholder="Username" id="username" class="inputField" type="text">
+    </div>
+
+    <div class="inputContainer">
+      <input placeholder="Password" id="password" class="inputField" type="password">
+    </div>
+
+    <button id="button">Submit</button>
+    <div class="loginContainer">
+      <p>Don't have any account?</p>
+      <a href="./html/signup.html">Sign up</a>
+    </div>
+  </form>
+
 </body>
 
 </html>
