--- a/html/main.html
+++ b/html/main.html
@@ -425,7 +425,7 @@
 
     <!-- featured banner -->
     <div class="featured-content">
-      <img class="feauted-content-title" src="./image/featured-content-title.png" alt="title">
+      <img class="feauted-content-title" src="../image/featured-content-title.png" alt="title">
       <p class="featured-content-description">With the help of a German bounty-hunter, a freed slave sets out to rescue
         his wife from a brutal plantation owner in Mississippi.</p>
       <a class="featured-content-link" href="">
