--- a/html/main.html
+++ b/html/main.html
@@ -719,8 +719,8 @@
         </div>
       </div>
     </footer>
-    <script src="./js/app.js"></script>
-    <script src="./js/app2.js"></script>
+    <script src="../js/app.js"></script>
+    <script src="../js/app2.js"></script>
   </main>
 </body>
 </htm>
